src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

@theme inline {
	--font-heading: var(--font-space-grotesk);
	--font-body: var(--font-ia-writer-quattro);
	--font-sans: var(--font-ia-writer-quattro);
	--font-mono: var(--font-fira-code);
}

.prose h1,
.prose h2,
.prose h3,
.prose h4 {
	@apply font-heading;
}

